force-app/main/default/objects/Issues__c/Issues__c.object-meta.xml
<CustomObject>
    <label>Post a Query</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Query No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post a Query</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>