force-app/main/default/objects/Issues__c/fields/Choose_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Choose_Date_Time__c</fullName>
    <label>Choose Date/Time</label>
    <type>DateTime</type>
</CustomField>