force-app/main/default/objects/Issues__c/fields/Choose_Grant_Form__c.field-meta.xml
<CustomField>
    <fullName>Choose_Grant_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choose Grant Form</label>
    <referenceTo>Grants__c</referenceTo>
    <relationshipLabel>Post a Query</relationshipLabel>
    <relationshipName>Post_a_Query</relationshipName>
    <type>Lookup</type>
</CustomField>