force-app/main/default/objects/Issues__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <label>Resolution Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>