force-app/main/default/objects/Issues__c/recordTypes/Admin_Layout.recordType-meta.xml
<RecordType>
    <fullName>Admin_Layout</fullName>
    <active>true</active>
    <description>Admin post a query layout</description>
    <label>Admin Layout</label>
</RecordType>