force-app/main/default/objects/Issues__c/listViews/All_Queries.listView-meta.xml
<ListView>
    <fullName>All_Queries</fullName>
    <columns>NAME</columns>
    <columns>Choose_Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Queries</label>
    <sharedTo>
        <group>IA_Issue_Tracker</group>
    </sharedTo>
</ListView>