force-app/main/default/objects/Issues__c/listViews/My_Queries.listView-meta.xml
<ListView>
    <fullName>My_Queries</fullName>
    <columns>NAME</columns>
    <columns>Choose_Grant_Form__c</columns>
    <columns>Choose_Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Queries</label>
    <sharedTo>
        <portalRole>IndiaAllianceCustomerUser</portalRole>
    </sharedTo>
</ListView>